fix overflow on batch catalog

--- a/frontend/src/assets/css/global.css
+++ b/frontend/src/assets/css/global.css
@@ -180,4 +180,8 @@ button.v-btn:focus {
   outline: none;
 }
 
+.v-table__wrapper {
+  overflow: unset;
+}
+
 
